--- a/project.private.config.json
+++ b/project.private.config.json
@@ -1,21 +1,13 @@
 {
   "setting": {},
   "condition": {
-    "plugin": {
-      "list": []
-    },
-    "game": {
-      "list": []
-    },
-    "gamePlugin": {
-      "list": []
-    },
     "miniprogram": {
       "list": [
         {
-          "name": "pages/index/index",
-          "pathName": "pages/index/index",
+          "name": "pages/login/login",
+          "pathName": "pages/login/login",
           "query": "",
+          "launchMode": "default",
           "scene": null
         },
         {
@@ -23,8 +15,27 @@
           "pathName": "pages/live/createalbum/createalbum",
           "query": "",
           "scene": null
+        },
+        {
+          "name": "pages/live/showmedia/showmedia",
+          "pathName": "pages/live/showmedia/showmedia",
+          "query": "",
+          "scene": null
+        },
+        {
+          "name": "pages/live/Photo/photo",
+          "pathName": "pages/live/Photo/photo",
+          "query": "",
+          "scene": null
+        },
+        {
+          "name": "pages/live/babyalbum/babyalbum",
+          "pathName": "pages/live/babyalbum/babyalbum",
+          "query": "",
+          "scene": null
         }
       ]
     }
-  }
+  },
+  "description": "项目私有配置文件。此文件中的内容将覆盖 project.config.json 中的相同字段。项目的改动优先同步到此文件中。详见文档：https://developers.weixin.qq.com/miniprogram/dev/devtools/projectconfig.html"
 }
