--- a/project.private.config.json
+++ b/project.private.config.json
@@ -1,44 +1,8 @@
 {
   "setting": {
-    "compileHotReLoad": true
+    "compileHotReLoad": false
   },
-  "condition": {
-    "miniprogram": {
-      "list": [
-        {
-          "name": "pages/login/login",
-          "pathName": "pages/login/login",
-          "query": "",
-          "launchMode": "default",
-          "scene": null
-        },
-        {
-          "name": "pages/live/createalbum/createalbum",
-          "pathName": "pages/live/createalbum/createalbum",
-          "query": "",
-          "scene": null
-        },
-        {
-          "name": "pages/live/showmedia/showmedia",
-          "pathName": "pages/live/showmedia/showmedia",
-          "query": "",
-          "scene": null
-        },
-        {
-          "name": "pages/live/Photo/photo",
-          "pathName": "pages/live/Photo/photo",
-          "query": "",
-          "scene": null
-        },
-        {
-          "name": "pages/live/babyalbum/babyalbum",
-          "pathName": "pages/live/babyalbum/babyalbum",
-          "query": "",
-          "scene": null
-        }
-      ]
-    }
-  },
+  "condition": {},
   "description": "项目私有配置文件。此文件中的内容将覆盖 project.config.json 中的相同字段。项目的改动优先同步到此文件中。详见文档：https://developers.weixin.qq.com/miniprogram/dev/devtools/projectconfig.html",
   "projectname": "FamilyAlbum",
   "libVersion": "2.12.3"
