--- a/app.json
+++ b/app.json
@@ -10,7 +10,7 @@
     "pages/mark/home/home",
     "pages/live/babyalbum/babyalbum",
     "pages/live/createalbum/createalbum",
-    "pages/live/Photo/photo",
+    "pages/live/photo/photo",
     "pages/live/showphoto/showphoto",
     "pages/live/showmedia/showmedia",
     
