--- a/project.private.config.json
+++ b/project.private.config.json
@@ -7,8 +7,15 @@
     "miniprogram": {
       "list": [
         {
-          "name": "albumowner",
-          "pathName": "pages/live/home/home",
+          "name": "",
+          "pathName": "pages/live/photo/photo",
+          "query": "",
+          "launchMode": "default",
+          "scene": null
+        },
+        {
+          "name": "",
+          "pathName": "pages/login/login",
           "query": "",
           "launchMode": "default",
           "scene": null
@@ -16,7 +23,7 @@
       ]
     }
   },
-  "description": "项目私有配置文件。此文件中的内容将覆盖 project.config.json 中的相同字段。项目的改动优先同步到此文件中。详见文档：https://developers.weixin.qq.com/miniprogram/dev/devtools/projectconfig.html",
+  "description": "Project configuration file, more information: https://developers.weixin.qq.com/miniprogram/dev/devtools/projectconfig.html",
   "projectname": "FamilyAlbum",
   "libVersion": "2.12.3"
 }
